End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "data source=datingapp.db"
-  }
+  },
+  "TokenKey": "supper secret unguessable key supper secret unguessable key"
 }
