End of section 9

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "data source=datingapp.db"
   },
-  "TokenKey": "supper secret unguessable key supper secret unguessable key"
+  "TokenKey": "your-very-long-secret-key-here-with-at-least-64-charactersyour-very-long-secret-key-here-with-at-least-64-characters"
 }
